<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/size16dp">

    <com.gosemathraj.thejoke.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categoryTitle"
        android:gravity="center"
        android:textSize="@dimen/textsize28sp"
        android:textColor="@color/yellow"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size24dp"
        android:layout_marginRight="@dimen/size8dp"
        android:layout_marginLeft="@dimen/size8dp"
        android:layout_marginBottom="@dimen/size8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/categoryOne"
            android:padding="@dimen/size8dp">

            <com.gosemathraj.thejoke.CustomIconTextView
                android:layout_width="@dimen/boxHeight"
                android:layout_height="@dimen/boxHeight"
                android:text="@string/pointerIcon"
                android:textSize="@dimen/textsize48sp"
                android:gravity="center"
                android:textColor="@color/redLight"/>

            <com.gosemathraj.thejoke.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/oneLiners"
                android:textSize="@dimen/textsize18sp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/categoryTwo"
            android:padding="@dimen/size8dp">

            <com.gosemathraj.thejoke.CustomIconTextView
                android:layout_width="@dimen/boxHeight"
                android:layout_height="@dimen/boxHeight"
                android:text="@string/pointerIcon"
                android:textSize="@dimen/textsize48sp"
                android:gravity="center"
                android:textColor="@color/purpleLight"/>

            <com.gosemathraj.thejoke.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/funnyJokes"
                android:textSize="@dimen/textsize18sp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/categoryThree"
            android:padding="@dimen/size8dp">

            <com.gosemathraj.thejoke.CustomIconTextView
                android:layout_width="@dimen/boxHeight"
                android:layout_height="@dimen/boxHeight"
                android:text="@string/pointerIcon"
                android:textSize="@dimen/textsize48sp"
                android:gravity="center"
                android:textColor="@color/darkBrown"/>

            <com.gosemathraj.thejoke.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/husbandAndWife"
                android:textSize="@dimen/textsize18sp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/categoryFour"
            android:padding="@dimen/size8dp">

            <com.gosemathraj.thejoke.CustomIconTextView
                android:layout_width="@dimen/boxHeight"
                android:layout_height="@dimen/boxHeight"
                android:text="@string/pointerIcon"
                android:textSize="@dimen/textsize48sp"
                android:gravity="center"
                android:textColor="@color/safronLight"/>

            <com.gosemathraj.thejoke.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teacherSpecial"
                android:textSize="@dimen/textsize18sp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="@dimen/size8dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/categoryFive"
            android:padding="@dimen/size8dp">

            <com.gosemathraj.thejoke.CustomIconTextView
                android:layout_width="@dimen/boxHeight"
                android:layout_height="@dimen/boxHeight"
                android:text="@string/pointerIcon"
                android:textSize="@dimen/textsize48sp"
                android:gravity="center"
                android:textColor="@color/green"/>

            <com.gosemathraj.thejoke.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insults"
                android:textSize="@dimen/textsize18sp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/categorySix"
            android:padding="@dimen/size8dp">

            <com.gosemathraj.thejoke.CustomIconTextView
                android:layout_width="@dimen/boxHeight"
                android:layout_height="@dimen/boxHeight"
                android:text="@string/pointerIcon"
                android:textSize="@dimen/textsize48sp"
                android:gravity="center"
                android:textColor="@color/darkGrey"/>

            <com.gosemathraj.thejoke.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/santaBanta"
                android:textSize="@dimen/textsize18sp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/categorySeven"
            android:padding="@dimen/size8dp">

            <com.gosemathraj.thejoke.CustomIconTextView
                android:layout_width="@dimen/boxHeight"
                android:layout_height="@dimen/boxHeight"
                android:text="@string/pointerIcon"
                android:textSize="@dimen/textsize48sp"
                android:gravity="center"
                android:textColor="@color/pinkLight"/>

            <com.gosemathraj.thejoke.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/doctorSpecial"
                android:textSize="@dimen/textsize18sp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>

</ScrollView>